--- a/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
+++ b/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,7 +41,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UsuarioDatos.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sisfacturacion.Entidades\Sisfacturacion.Entidades.csproj">
+      <Project>{6600e24b-9a53-47d2-9a43-78982ab83634}</Project>
+      <Name>Sisfacturacion.Entidades</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
