--- a/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
@@ -52,10 +52,19 @@
     <Compile Include="InicioSesion.Designer.cs">
       <DependentUpon>InicioSesion.cs</DependentUpon>
     </Compile>
+    <Compile Include="Principal.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Principal.Designer.cs">
+      <DependentUpon>Principal.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="InicioSesion.resx">
       <DependentUpon>InicioSesion.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Principal.resx">
+      <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -78,6 +87,16 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sisfacturacion.Entidades\Sisfacturacion.Entidades.csproj">
+      <Project>{6600e24b-9a53-47d2-9a43-78982ab83634}</Project>
+      <Name>Sisfacturacion.Entidades</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Sisfacturacion.Logica\Sisfacturacion.Logica.csproj">
+      <Project>{7a72a1ca-fcad-4fb5-9eb4-508c2775fa2c}</Project>
+      <Name>Sisfacturacion.Logica</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
