--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Caja.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
