--- a/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CajaLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TipoUsuarioLogica.cs" />
     <Compile Include="UsuarioLogica.cs" />
