--- a/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
+++ b/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CiudadDatos.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProveedorDatos.cs" />
     <Compile Include="Seguridad.cs" />
     <Compile Include="TipoUsuarioDatos.cs" />
     <Compile Include="UsuarioDatos.cs" />
