--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Caja.cs" />
     <Compile Include="Ciudad.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Proveedor.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
