--- a/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
@@ -70,6 +70,12 @@
     <Compile Include="MantenimientoCiudad.Designer.cs">
       <DependentUpon>MantenimientoCiudad.cs</DependentUpon>
     </Compile>
+    <Compile Include="MantenimientoProveedores.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MantenimientoProveedores.Designer.cs">
+      <DependentUpon>MantenimientoProveedores.cs</DependentUpon>
+    </Compile>
     <Compile Include="MantenimientoUsuarios.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -95,6 +101,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="MantenimientoCiudad.resx">
       <DependentUpon>MantenimientoCiudad.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="MantenimientoProveedores.resx">
+      <DependentUpon>MantenimientoProveedores.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="MantenimientoUsuarios.resx">
       <DependentUpon>MantenimientoUsuarios.cs</DependentUpon>
