Cambios en mantenimiento de productos(logica)

--- a/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="CajaLogica.cs" />
     <Compile Include="CiudadLogica.cs" />
+    <Compile Include="ProductoLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorLogica.cs" />
     <Compile Include="TipoUsuarioLogica.cs" />
