--- a/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
+++ b/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CajaDatos.cs" />
     <Compile Include="CiudadDatos.cs" />
     <Compile Include="Conexion.cs" />
+    <Compile Include="ProductoDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorDatos.cs" />
     <Compile Include="Seguridad.cs" />
