--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -42,6 +42,7 @@
   <ItemGroup>
     <Compile Include="Caja.cs" />
     <Compile Include="Ciudad.cs" />
+    <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
     <Compile Include="TipoUsuario.cs" />
