--- a/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CajaLogica.cs" />
+    <Compile Include="CategoriaProductoLogica.cs" />
     <Compile Include="CiudadLogica.cs" />
     <Compile Include="ProductoLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
