--- a/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
+++ b/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CajaDatos.cs" />
+    <Compile Include="CategoriaProductoDatos.cs" />
     <Compile Include="CiudadDatos.cs" />
     <Compile Include="Conexion.cs" />
     <Compile Include="ProductoDatos.cs" />
