--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Caja.cs" />
+    <Compile Include="CategoriaProducto.cs" />
     <Compile Include="Ciudad.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
