--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Caja.cs" />
     <Compile Include="CategoriaProducto.cs" />
     <Compile Include="Ciudad.cs" />
+    <Compile Include="Cliente.cs" />
     <Compile Include="Producto.cs" />
     <Compile Include="Promocion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
