--- a/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
+++ b/Sisfacturacion/Sisfacturacion.Datos/Sisfacturacion.Datos.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ProveedorDatos.cs" />
     <Compile Include="Seguridad.cs" />
+    <Compile Include="TipoPagoDatos.cs" />
     <Compile Include="TipoUsuarioDatos.cs" />
     <Compile Include="UsuarioDatos.cs" />
   </ItemGroup>
