--- a/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
+++ b/Sisfacturacion/Sisfacturacion.Entidades/Sisfacturacion.Entidades.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Promocion.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Proveedor.cs" />
+    <Compile Include="TipoPago.cs" />
     <Compile Include="TipoUsuario.cs" />
     <Compile Include="Usuario.cs" />
   </ItemGroup>
