--- a/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
@@ -114,6 +114,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SeleccionCaja.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SeleccionCaja.Designer.cs">
+      <DependentUpon>SeleccionCaja.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="CambiarContrasenna.resx">
       <DependentUpon>CambiarContrasenna.cs</DependentUpon>
     </EmbeddedResource>
@@ -157,6 +163,9 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="SeleccionCaja.resx">
+      <DependentUpon>SeleccionCaja.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -215,6 +224,15 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Iniciar Sesion 2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Agregar Producto.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Facturar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Acceder.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
