--- a/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Logica/Sisfacturacion.Logica.csproj
@@ -44,6 +44,7 @@
     <Compile Include="CategoriaProductoLogica.cs" />
     <Compile Include="CiudadLogica.cs" />
     <Compile Include="ClienteLogica.cs" />
+    <Compile Include="FacturaLogica.cs" />
     <Compile Include="ProductoLogica.cs" />
     <Compile Include="PromocionLogica.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
