--- a/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
+++ b/Sisfacturacion/Sisfacturacion.Grafica/Sisfacturacion.Grafica.csproj
@@ -33,8 +33,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Microsoft.ReportViewer.Common, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
+    <Reference Include="Microsoft.ReportViewer.WinForms, Version=12.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -51,6 +54,16 @@
     </Compile>
     <Compile Include="CambiarContrasenna.Designer.cs">
       <DependentUpon>CambiarContrasenna.cs</DependentUpon>
+    </Compile>
+    <Compile Include="DB_SisFacturacionDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DB_SisFacturacionDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="DB_SisFacturacionDataSet1.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>DB_SisFacturacionDataSet1.xsd</DependentUpon>
     </Compile>
     <Compile Include="Facturacion.cs">
       <SubType>Form</SubType>
@@ -106,6 +119,12 @@
     <Compile Include="MantenimientoUsuarios.Designer.cs">
       <DependentUpon>MantenimientoUsuarios.cs</DependentUpon>
     </Compile>
+    <Compile Include="MostrarFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="MostrarFactura.Designer.cs">
+      <DependentUpon>MostrarFactura.cs</DependentUpon>
+    </Compile>
     <Compile Include="Principal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -123,6 +142,7 @@
     <EmbeddedResource Include="CambiarContrasenna.resx">
       <DependentUpon>CambiarContrasenna.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Factura.rdlc" />
     <EmbeddedResource Include="Facturacion.resx">
       <DependentUpon>Facturacion.cs</DependentUpon>
     </EmbeddedResource>
@@ -150,6 +170,9 @@
     <EmbeddedResource Include="MantenimientoUsuarios.resx">
       <DependentUpon>MantenimientoUsuarios.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="MostrarFactura.resx">
+      <DependentUpon>MostrarFactura.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Principal.resx">
       <DependentUpon>Principal.cs</DependentUpon>
     </EmbeddedResource>
@@ -166,6 +189,28 @@
     <EmbeddedResource Include="SeleccionCaja.resx">
       <DependentUpon>SeleccionCaja.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="DB_SisFacturacionDataSet.xsc">
+      <DependentUpon>DB_SisFacturacionDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DB_SisFacturacionDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DB_SisFacturacionDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DB_SisFacturacionDataSet.xss">
+      <DependentUpon>DB_SisFacturacionDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="DB_SisFacturacionDataSet1.xsc">
+      <DependentUpon>DB_SisFacturacionDataSet1.xsd</DependentUpon>
+    </None>
+    <None Include="DB_SisFacturacionDataSet1.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>DB_SisFacturacionDataSet1.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="DB_SisFacturacionDataSet1.xss">
+      <DependentUpon>DB_SisFacturacionDataSet1.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -233,6 +278,24 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Acceder.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Cobrar.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Login.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Menu Principal.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Facturar y Devoluciones.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Mantenimientos Referentes a Articulos.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\Mantenimientos Referentes a Personal y Clientes.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
