Cambios en logica de Musica

--- a/ReproductorMusica/Musica.Datos/Musica.Datos.csproj
+++ b/ReproductorMusica/Musica.Datos/Musica.Datos.csproj
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,7 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AlbumDatos.cs" />
+    <Compile Include="CancionDatos.cs" />
+    <Compile Include="Conexion.cs" />
+    <Compile Include="InterpreteDatos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Musica.Entidades\Musica.Entidades.csproj">
+      <Project>{2bd1a1d8-8e41-42ab-b180-15b437bd2dda}</Project>
+      <Name>Musica.Entidades</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
