--- a/ReproductorMusica/Musica.Entidades/Musica.Entidades.csproj
+++ b/ReproductorMusica/Musica.Entidades/Musica.Entidades.csproj
@@ -40,6 +40,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Album.cs" />
+    <Compile Include="Cancion.cs" />
+    <Compile Include="Interprete.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
